--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
                 "watch": "npm-run-all build --parallel watch:*",
                 "watch:sass": "node-sass --output-style expanded --source-map true -o css sass --watch",
                 "watch:autoprefixer": "onchange -d 100 css/style.css -- autoprefixer-cli -o css/style.prefixed.css css/style.css",
-                "watch:browsersync": "browser-sync"
+                "watch:browsersync": "browser-sync start -s -w"
         },
         "keywords": [],
         "author": "",
