--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
                 "init:gitignore": "curl https://raw.githubusercontent.com/github/gitignore/master/Node.gitignore -o .gitignore",
 
                 "build": "npm-run-all build:* test",
+                "build:clean": "rimraf css/*",
                 "build:sass": "node-sass --output-style compact -o css sass",
                 "build:autoprefixer": "autoprefixer-cli css/style.css",
-                "build-dev:sass": "node-sass --output-style expanded --source-map true -o css sass",
 
                 "watch": "npm-run-all build --parallel watch:*",
                 "watch:sass": "node-sass --output-style expanded --source-map true -o css sass --watch",
@@ -33,6 +33,7 @@
                 "node-sass": "^4.10.0",
                 "npm-run-all": "^4.1.5",
                 "nu-html-checker": "^0.1.0",
-                "onchange": "^5.1.3"
+                "onchange": "^5.1.3",
+                "rimraf": "^2.6.2"
         }
 }
