--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
                 "build:sass": "node-sass --output-style compact -o css sass",
                 "build:autoprefixer": "autoprefixer-cli css/style.css",
 
+                "build-dev:sass": "node-sass --output-style expanded --source-map true -o css sass",
+
                 "watch": "npm-run-all build --parallel watch:*",
-                "watch:sass": "node-sass --output-style expanded --source-map true -o css sass --watch",
-                "watch:autoprefixer": "onchange -d 100 css/style.css -- autoprefixer-cli -o css/style.prefixed.css css/style.css",
-                "watch:browsersync": "browser-sync start -s -w"
+                "watch:sassprefixer": "onchange sass/* -- npm-run-all watch-sass watch-autoprefixer",
+                "watch:browsersync": "browser-sync start -s -w",
+                "watch-sass": "node-sass --output-style expanded --source-map true -o css sass",
+                "watch-autoprefixer": "autoprefixer-cli css/style.css"
         },
         "keywords": [],
         "author": "",
